# drf-facets

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
src/drf_facets/: __init__.py  apps.py  cli.py  models.py  serializers.py  urls.py  views.py
tests/: __init__.py  settings.py  test_models.py  test_serializers.py  test_views.py  urls.py  wsgi.py
